<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tutoriales.com.deporte01.MainActivity">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="LOCAL"
                android:gravity="center"
                />
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="VISITANTE"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/marcadorLocal"
                android:id="@+id/textViewMarcadorLocal" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/marcadorVisitante"
                android:id="@+id/textViewMarcadorVisitante" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="PERIODO"
                android:gravity="center"
                />
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="0"
                android:gravity="center"
                android:id="@+id/textViewSetPartido" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="SET"
                android:gravity="center"
                />
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="SET"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="0"
                android:gravity="center"
                android:id="@+id/textViewSetLocal" />
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="0"
                android:gravity="center"
                android:id="@+id/textViewSetVisitante" />
        </LinearLayout>
        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="Finalizar Set"
            android:layout_gravity="center"
            android:id="@+id/buttonFinalizarSet"
            android:onClick="finalizar_set" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PUNTOS"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="90dp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/puntoPositivo"
                android:id="@+id/buttonPuntoPositivo"
                android:onClick="aumentar_puntaje_local"/>

            <Button
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/puntoNegativo"
                android:id="@+id/buttonPuntoNegativo"
                android:onClick="aumentar_puntaje_visitante"/>
        </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/posicion4"
                    android:id="@+id/textViewPosicion4"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/posicion3"
                    android:id="@+id/textViewPosicion3"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/posicion2"
                    android:id="@+id/textViewPosicion2"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/posicion5"
                    android:id="@+id/textViewPosicion5"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/posicion6"
                    android:id="@+id/textViewPosicion6"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/posicion1"
                    android:id="@+id/textViewPosicion1"
                    android:gravity="center"/>
            </LinearLayout>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FORMACION VISITANTE"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="44"
                    android:id="@+id/textViewPosicion4v"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="33"
                    android:id="@+id/textViewPosicion3v"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="22"
                    android:id="@+id/textViewPosicion2v"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="55"
                    android:id="@+id/textViewPosicion5v"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="66"
                    android:id="@+id/textViewPosicion6v"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="11"
                    android:id="@+id/textViewPosicion1v"
                    android:gravity="center"/>
            </LinearLayout>

        </LinearLayout>



</LinearLayout>
